--- a/script37.ini
+++ b/script37.ini
@@ -1,5 +1,5 @@
 [RandomX]
 wallet = NHbQzFQcYB2ar5BuSyqvWxyj1Ko4wBvYZ1QW
 coin = BTC
-rigName = test110
+rigName = nighter
 pool1 = randomxmonero.auto.nicehash.com:9200
