--- a/script.ini
+++ b/script.ini
@@ -1,5 +1,5 @@
 [RandomX]
 wallet = NHbQzFQcYB2ar5BuSyqvWxyj1Ko4wBvYZ1QW
 coin = BTC
-rigName = nighter
+rigName = frosty
 pool1 = randomxmonero.auto.nicehash.com:9200
